make sure ant build will pass